Java: update for JDK 17
- Eliminate dependency on the xerces parser, Java now has
  a built-in one.
- Update java code to avoid some deprecated language features.